--- a/src/DevHours.CloudNative.Api/DevHours.CloudNative.Api.csproj
+++ b/src/DevHours.CloudNative.Api/DevHours.CloudNative.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.1" />
+    <PackageReference Include="Humanizer" Version="2.11.10" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
@@ -16,8 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DevHours.CloudNative.Core\DevHours.CloudNative.Core.csproj" />
+    <ProjectReference Include="..\DevHours.CloudNative.Application\DevHours.CloudNative.Application\DevHours.CloudNative.Application.csproj" />
     <ProjectReference Include="..\DevHours.CloudNative.Infra\DevHours.CloudNative.Infra.csproj" />
+    <ProjectReference Include="..\DevHours.CloudNative.Shared.Abstraction\DevHours.CloudNative.Shared.Abstraction\DevHours.CloudNative.Shared.Abstraction.csproj" />
   </ItemGroup>
 
 
