--- a/test/DevHours.CloudNative.Core.Tests/DevHours.CloudNative.Core.Tests.csproj
+++ b/test/DevHours.CloudNative.Core.Tests/DevHours.CloudNative.Core.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -23,6 +24,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DevHours.CloudNative.Core\DevHours.CloudNative.Core.csproj" />
+    <ProjectReference Include="..\..\src\DevHours.CloudNative.Application\DevHours.CloudNative.Application\DevHours.CloudNative.Application.csproj" />
   </ItemGroup>
 </Project>
