--- a/test/DevHours.CloudNative.Core.Tests/DevHours.CloudNative.Core.Tests.csproj
+++ b/test/DevHours.CloudNative.Core.Tests/DevHours.CloudNative.Core.Tests.csproj
@@ -24,6 +24,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DevHours.CloudNative.Application\DevHours.CloudNative.Application\DevHours.CloudNative.Application.csproj" />
+    <ProjectReference Include="..\..\src\DevHours.CloudNative.Application\DevHours.CloudNative.Application.csproj" />
   </ItemGroup>
 </Project>
