--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3.9"
 services:
-    
+    api:
+        image: devhours.cloudnative.api
+        ports:
+            - "5000:80"
+        environment:
+            Cors__AllowedOrigins__0: "http://localhost:4200"
+    frontend:
+        image:  devhours.cloudnative.frontend
+        ports:
+            - "4200:80"
+        environment:
+            webapi: "http://localhost:5000/api"
     db:
         image: "mcr.microsoft.com/mssql/server"
         ports: 
