--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
             - "5000:80"
         environment:
             Cors__AllowedOrigins__0: "http://localhost:4200"
+            ConnectionStrings__HotelDbConnection: "User ID=postgres;Password=example;Host=db;Port=5432;Database=myDataBase;"
+        depends_on: 
+            - db
     frontend:
         image:  devhours.cloudnative.frontend
         ports:
@@ -13,12 +16,10 @@ services:
         environment:
             webapi: "http://localhost:5000/api"
     db:
-        image: "mcr.microsoft.com/mssql/server"
-        ports: 
-            - "1433:1433"
+        image: postgres
+        restart: always
         environment:
-            SA_PASSWORD: "Your_password123"
-            ACCEPT_EULA: "Y"
+            POSTGRES_PASSWORD: example
     storage: 
         image: mcr.microsoft.com/azure-storage/azurite
         ports:
