--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,6 @@ on:
 env:
   IMAGE_NAME: devhours.cloudnative.api
   TAG_REF: $(date +%s)
-  IMAGE_FULL_NAME: ${{ env.IMAGE_NAME }}:${{ env.TAG_REF }}
   REGISTRY: piptak
 
 jobs:
@@ -20,10 +19,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.IMAGE_FULL_NAME }}
+        run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:${{ env.TAG_REF }}
 
       - name: Tag image
-        run: docker tag ${{ env.IMAGE_FULL_NAME }} ${{ env.REGISTRY }}/${{ env.IMAGE_FULL_NAME }}
+        run: docker tag ${{ env.IMAGE_NAME }}:${{ env.TAG_REF }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG_REF }}
 
   # publish:
 
