--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.REGISTRY }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Create version tag
         id: createtag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
@@ -30,5 +36,10 @@ jobs:
 
       - name: Tag image
         run: docker tag ${{ env.IMAGE_NAME }}:${{ env.VERSION }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+        env:
+          VERSION: ${{ steps.createtag.outputs.tag }}
+
+      - name: Push image
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
         env:
           VERSION: ${{ steps.createtag.outputs.tag }}
