--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -15,19 +15,24 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Login to dockerhub
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ env.REGISTRY }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
     - name: 'Create version tag'
         id: createtag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}
+
     - name: Tag docker image
       run: docker tag ${{ env.IMAGE_NAME }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
       env:
         VERSION: ${{ steps.createtag.outputs.tag }}
+
     - name: Publish docker image
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
