add azure deployment task

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -38,3 +38,20 @@ jobs:
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
       env:
         VERSION: ${{ steps.createtag.outputs.tag }}
+
+    - name: 'Login Azure'
+          uses: azure/login@v1
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy application
+      uses: Azure/aci-deploy@v1
+      env:
+        VERSION: ${{ steps.createtag.outputs.tag }}
+      with:
+        resource-group: dev-hours-test
+        dns-name-label: dev-hours-api
+        image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+        name: dev-hours-api
+        location: 'westeurope'
+        environment-variables: "Cors__AllowedOrigins__0=http://dev-hours-frontend.westeurope.azurecontainer.io"
